[refs #110761] Fix extra space in footer (homepage).

--- a/land/copernicus/theme/skins/copernicus_theme_styles/redesign-app.css
+++ b/land/copernicus/theme/skins/copernicus_theme_styles/redesign-app.css
@@ -6698,6 +6698,10 @@ li#land-language-selector li:after {
   background: #FFFFFF;
 }
 
+body.template-homepage div.row.land-row-footer {
+  margin: 0px;
+}
+
 .color-white, footer .partners {
   color: #FFFFFF; }
 
